# MolSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  new_header.html
.github/workflows/: ci.yml
DoxygenDocs/: runtimeComparison.dox
cmake/: CMakeLists.txt
cmake/modules/: doxygen.cmake  spdlog.cmake
doxygen_custom/: new_footer.html  new_stylesheet.css
input/: cuboid-example-assignment3.txt  cuboid-example.txt  disc-example.txt  eingabe-sonne.txt  rayleigh-taylor-small.xml  schema.xml  schemaTest1.xml  schemaTest2.xml
input/Assignment4Inputs/: rayleigh-taylor-big.xml  rayleigh-taylor-small.xml
input/Assignment4Inputs/FallingDropLiquid/: EquilibratedDrop.xml
input/Assignment4Inputs/FallingDropLiquid/Subsimulations/: Basin.xml
input/Assignment5Inputs/: MembraneOne.xml  rayleigh-taylor-3d.xml  task4.xml
input/Assignment5Inputs/Task4Experiments/: task4Densitiy.xml  task4IncreasedGravity.xml  task4SigmaAndEpsilon.xml  task4withBoundaries.xml  task4withSphere.xml
src/: FileReader.cpp  FileReader.h  MolSim.cpp  MolSim.h  MolSimFunctions.cpp  MolSimFunctions.h  Particle.cpp  ParticleContainer.cpp  ParticleContainer.h
src/Calculator/: Calculator.h  GravityCalculator.cpp  GravityCalculator.h  HarmonicForceCalculator.cpp  HarmonicForceCalculator.h  LennardJonesCalculator.cpp  LennardJonesCalculator.h  gravityCalculator.cpp  gravityCalculator.h  lennardJonesCalculator.cpp  lennardJonesCalculator.h
src/IO/: FileReader.cpp
src/IO/Input/: FileReader.cpp  FileReader.h  XMLfileReader.cpp  XMLfileReader.h  schema.cpp  schema.cxx  schema.h  schema.hxx  schema.xsd
src/IO/Input/CheckpointInput/: CheckpointSchema.cpp  CheckpointSchema.h  CheckpointSchema.xsd
src/IO/Input/CheckpointInput/CheckpointReader/: CheckpointFileReader.cpp  CheckpointFileReader.h
src/IO/Output/outputWriter/: OutputWriter.h  ProfilePrinter.cpp  ProfilePrinter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/IO/Output/outputWriter/CheckpointOutput/: CheckpointWriter.cpp  CheckpointWriter.h
src/Objects/: Cell.cpp  Cell.h  Cuboid.cpp  Cuboid.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleIdInitializer.cpp  ParticleIdInitializer.h
src/Objects/Containers/: ParticleContainer.h
src/Objects/Containers/Direct Sum/: DirectSumContainer.cpp  DirectSumContainer.h
src/Objects/Containers/DirectSum/: DirectSumContainer.cpp  DirectSumContainer.h
src/Objects/Containers/Linked Cell/: LinkedCell.h
src/Objects/Containers/LinkedCell/: BoudaryHandler.cpp  BoundaryHandler.cpp  BoundaryHandler.h  LinkedCell.h  LinkedCellContainer.cpp  LinkedCellContainer.h
src/Objects/Shapes/: Cuboid.h  Disc.h
src/Objects/Temperature/: AverageThermostat.cpp  AverageThermostat.h  DirectThermostat.cpp  DirectThermostat.h  GradualThermostat.cpp  GradualThermostat.h  Thermostat.h  ZXThermostat.cpp  ZXThermostat.h
src/outputWriter/: OutputWriter.h  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
tests/: CMakeLists.txt  CalculatorTest.cpp  MolSimTest.cpp  ParticleContainerTest.cpp  ParticleGeneratorTest.cpp
tests/Calculator/: CalculatorTest.cpp
tests/IO/: CheckpointTest.cpp  XMLfileReaderTest.cpp
tests/Objects/: BoundaryHandlerTest.cpp  CuboidTest.cpp  ParticleContainerTest.cpp  ParticleGeneratorTest.cpp
tests/Objects/Temperature/: ThermostatTest.cpp
